Fixed level result styling. Added overflow scrolling for password levels. Added funny animations for final level.

--- a/src/app/screens/password-game-screen/password-game-screen.component.scss
+++ b/src/app/screens/password-game-screen/password-game-screen.component.scss
@@ -28,8 +28,8 @@ header {
 
 header h1 {
   font-size: 4em;
-  color: #000000;
-  text-shadow: 0 0 5px #00ccff, 0 0 10px #00ccff, 0 0 20px #00ccff;
+  color: #007e94;
+  text-shadow: 0 0 5px #0055ff, 0 0 10px #00d9ff, 0 0 20px #2eff00;
   animation: rotateText 1200s linear infinite;
 }
 
